force-app/main/default/objects/Pre_Sales_Support_Request__c/Pre_Sales_Support_Request__c.object-meta.xml
<CustomObject>
    <description>Support requests to enable the Delivery organization to work more effectively with Sales, while also providing Sales predictability and needed support during the pre-sales cycles.</description>
    <label>PreSales Support Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>PreSales Support Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PreSales Support Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>