force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The box is checked when the request is resolved.</description>
    <inlineHelpText>Check the box if the request is resolved, and an email alert is sent to the opportunity owner.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>