force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>The date the Completed box is checked.</description>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>