force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/of_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Open__c</fullName>
    <formula>IF(ISBLANK( Request_Owner__c),  TODAY() - Date_Created__c+1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>