force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <formula>IF ( AND( ISBLANK( Request_Owner__c ),PSR_Due_Date__c  &lt; TODAY ()) , TODAY () -  PSR_Due_Date__c  , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>