force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/Project_Workbook__c.field-meta.xml
<CustomField>
    <fullName>Project_Workbook__c</fullName>
    <formula>HYPERLINK(&quot;https://docs.google.com/spreadsheets/d/1y8f9pW1suSCHx5CEOqCOldpNYsSJwziVECBTtg7NsBM/edit#gid=796972606&quot;, &quot;Project Workbook&quot;)</formula>
    <label>Project Workbook</label>
    <type>Text</type>
</CustomField>