force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/PSR_Count__c.field-meta.xml
<CustomField>
    <fullName>PSR_Count__c</fullName>
    <description>A count of PSRs submitted per opportunity.</description>
    <inlineHelpText>A count of PSRs submitted per opportunity.</inlineHelpText>
    <label>PSR Count</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>