force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/PSR_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PSR_Due_Date__c</fullName>
    <description>The date the estimate is needed by.</description>
    <inlineHelpText>When is the estimate for the PSR needed by?</inlineHelpText>
    <label>PSR Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>