force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/PSR_Name__c.field-meta.xml
<CustomField>
    <fullName>PSR_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://7summitsagency.my.salesforce.com/&quot; &amp; Id, Opportunity__r.Name + &quot; &quot; + &quot;PSR&quot; + &quot; &quot; + RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSR Name</label>
    <type>Text</type>
</CustomField>