force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/PSR_Status__c.field-meta.xml
<CustomField>
    <fullName>PSR_Status__c</fullName>
    <description>The status of the PSR Request.</description>
    <inlineHelpText>What is the status of the PSR Request?</inlineHelpText>
    <label>PSR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>