force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/PSR_Type__c.field-meta.xml
<CustomField>
    <fullName>PSR_Type__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSR Type</label>
    <type>Text</type>
</CustomField>