force-app/main/default/objects/Pre_Sales_Support_Request__c/fields/Request_Owner__c.field-meta.xml
<CustomField>
    <fullName>Request_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the 7Summits employee/contractor who owns this request.</description>
    <inlineHelpText>Who is taking ownership of this PSR?</inlineHelpText>
    <label>PSR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pre_Sales_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>