force-app/main/default/objects/Pre_Sales_Support_Request__c/recordTypes/Delivery_Management.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Management</fullName>
    <active>true</active>
    <label>Delivery Management</label>
</RecordType>