force-app/main/default/objects/Pre_Sales_Support_Request__c/recordTypes/Digital_Transformation.recordType-meta.xml
<RecordType>
    <fullName>Digital_Transformation</fullName>
    <active>true</active>
    <label>Digital Transformation</label>
</RecordType>