force-app/main/default/objects/Pre_Sales_Support_Request__c/recordTypes/Experience_Design_Studio.recordType-meta.xml
<RecordType>
    <fullName>Experience_Design_Studio</fullName>
    <active>true</active>
    <label>Experience Design Studio</label>
</RecordType>