force-app/main/default/objects/Pre_Sales_Support_Request__c/recordTypes/Strategy_Insights.recordType-meta.xml
<RecordType>
    <fullName>Strategy_Insights</fullName>
    <active>true</active>
    <label>Strategy &amp; Insights</label>
</RecordType>