force-app/main/default/objects/Pre_Sales_Support_Request__c/recordTypes/Tech_Services_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Tech_Services_Solutions</fullName>
    <active>true</active>
    <label>Tech Services &amp; solutions</label>
</RecordType>