force-app/main/default/objects/Pre_Sales_Support_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>PSR_Name__c</columns>
    <columns>Request_Owner__c</columns>
    <columns>PSR_Due_Date__c</columns>
    <columns>PSR_Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>PSR_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>